--- a/about.html
+++ b/about.html
@@ -51,8 +51,7 @@
   <section class="jumbotron">
     <div class="container">
       <div class="row text-center">
-        <h2>About</h2>
-        <br>
+        <h2>About Bethany</h2>
 		<a class="btn btn-primary" href="projects.html" role="button">Learn more
         </a>
       </div>
@@ -67,9 +66,11 @@
             </div>
         <div class="col-sm-8">
       <h4>
-      <p>Bethany McShurley of Faith-Based Editorial Services has worked on projects for noted authors Randy Alcorn, Henry Blackaby, Lisa Whelchel, and Margaret Feinberg. She’s also a writer of Christian curriculum, church productions, and leader guides. Her work is featured in Vicki Courtney’s <i>Five Conversations You Must Have with Your Son, Jennifer Rothschild's Missing Pieces: Real Hope When Life Doesn't Make Sense</i>, and Beth Moore’s <i>James: Mercy Triumphs</i>.   
+      <p>
+      Bethany has worked on projects for noted authors Randy Alcorn, Henry Blackaby, Lisa Whelchel, and Tony Evans. She’s also a writer of Christian curriculum, faith-building articles, and leader guides. Her work has been featured in Answers magazine, in Jennifer Rothschild's Missing Pieces: Real Hope When Life Doesn't Make Sense</i>, and in Beth Moore’s <i>James: Mercy Triumphs</i>.   
       <br><br>Whether helping authors perfect their messages of faith prior to print or condensing inspirational trade books into workbook format, Bethany uses her eye for detail to strengthen Christian discipleship efforts. Helping people to clearly and enthusiastically convey the difference Jesus Christ makes in lives is central to her work.
-      <br><br>Each client of Faith-Based Editorial Services can expect encouragement and idea prompts meant to stimulate professional and spiritual growth. Bethany begins with a critique of your work as a whole. Is the message solid? Does it convey what you intend? Might your project find a place in today's competitive Christian market? The subsequent editing process is a learning experience that both polishes the message and strengthens the writer. Even recognized authors benefit from the honest feedback of an experienced editor.</p>
+      <br><br>Should you become a client of Faith-Based Editorial Services, you can expect encouragement and idea prompts meant to stimulate professional and spiritual growth. Bethany begins with a critique of your work as a whole. Is the message solid? Does it convey what you intend? Might your project find a place in today's competitive Christian market? The subsequent editing process is a learning experience that both polishes the message and strengthens the writer. Even recognized authors benefit from the honest feedback of an experienced editor invested in the gospel mission.
+      </p>
       </h4>
         </div>
         
@@ -78,8 +79,8 @@
     </section>
     <footer class="container">
         <div class="row">
-          <p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
-          <ul class="col-sm-8">
+            <p class="col-sm-4"><a href="mailto:bethany@faithbasededitorial.com">bethany@faithbasededitorial.com</a><br>&copy; 2016 Faith-Based Editorial Services</p>
+            <ul class="col-sm-8">
             <li class="col-sm-2">
               <a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="images\FB-fLogo-Blue-broadcast-2.png"> </a>
             </li>
