--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
     <div class="container">
       <div class="row text-center">
         <h2>Contact Us</h2>
-        <h3>Thank you for your interest in Faith-Based Editorial Services. I would love to help you! Please fill out the form below, and I will reply soon.</h3>
-<div class="contactForm">
+        <h3>Thank you for your interest in Faith-Based Editorial Services. I would love to help you! <br>Please e-mail me and tell me about your project: <a href="mailto:bethany@faithbasededitorial.com">bethany@faithbasededitorial.com</a>. <br>I will reply as soon as possible.</h3>
+<!--<div class="contactForm">
         <form id="serverless-contact-form">
           <input type="text" name="fname" placeholder="Name" class="form-name">
           <input type="text" name="email" placeholder="Email Address" class="form-email">
@@ -55,6 +55,7 @@
           <input type="submit" name="submit" value="Submit" class="form-submit">
         </form>
         </div>
+      --> 
       </div>
     </div>
   </section>
@@ -72,7 +73,7 @@
   </section>
   <footer class="container">
       <div class="row">
-        <p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
+        <p class="col-sm-4"><a href="mailto:bethany@faithbasededitorial.com">bethany@faithbasededitorial.com</a><br>&copy; 2016 Faith-Based Editorial Services</p>
         <ul class="col-sm-8">
           <li class="col-sm-2">
             <a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="images\FB-fLogo-Blue-broadcast-2.png"> </a>
