--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <div class="container">
       <div class="row text-center">
         <h2>Faith-Based Editorial Services</h2>
-        <h3>Whether you’ve written a devotional book, biography, Bible study, or novel, a thorough edit can make your manuscript—and your message—shine. Before shopping for an agent or releasing your book on your own, allow a seasoned editor to strengthen your project.
+        <h3>Whether you’ve written a devotional book, autobiography, Bible study, or novel, a thorough edit can make your manuscript—and your message—shine. Before shopping for an agent or releasing your book on your own, allow a seasoned editor to strengthen your project.
         <p></p>
-        Bethany McShurley of Faith-Based Editorial Services specializes in preparing and developing writers for the Christian market.</h3>
+        Bethany McShurley specializes in preparing and developing writers for the Christian market.</h3>
 		<a class="btn btn-primary" href="about.html" role="button">Learn more</a>
       </div>
     </div>
@@ -75,8 +75,8 @@
   </section>
   <footer class="container">
     <div class="row">
-      <p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
-      <ul class="col-sm-8">
+        <p class="col-sm-4"><a href="mailto:bethany@faithbasededitorial.com">bethany@faithbasededitorial.com</a><br>&copy; 2016 Faith-Based Editorial Services</p>
+        <ul class="col-sm-8">
         <li class="col-sm-2">
           <a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="images\FB-fLogo-Blue-broadcast-2.png"> </a>
         </li>
