--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
     <div class="container">
       <div class="row text-center">
         <h2>Projects</h2>
-				<h3>Bethany McShurley edits a wide range of resources: church and business correspondence, curriculum, novels, devotionals, Christian biographies, workbooks, and promotional materials. She reviews initial product proposals, offers book doctoring assistance as necessary, and provides rewriting, content editing, and proofreading help as required. She has worked on the following titles, and many others, in various capacities. </h3>
+				<h3>Bethany McShurley edits a wide range of resources: church and business correspondence, magazine articles, curriculum, study Bible content, novels, devotionals, Christian biographies, workbooks, and promotional materials. She reviews initial product proposals, offers book doctoring assistance as necessary, and provides rewriting, content editing, and copyediting help as required. She has worked on the following titles, and many others, in various capacities. </h3>
 				<a class="btn btn-primary" href="faq.html" role="button">Learn more</a>
       </div>
     </div>
@@ -143,8 +143,8 @@
   </section>
 	<footer class="container">
 			<div class="row">
-				<p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
-				<ul class="col-sm-8">
+					<p class="col-sm-4"><a href="mailto:bethany@faithbasededitorial.com">bethany@faithbasededitorial.com</a><br>&copy; 2016 Faith-Based Editorial Services</p>
+					<ul class="col-sm-8">
 					<li class="col-sm-2">
 						<a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="images\FB-fLogo-Blue-broadcast-2.png"> </a>
 					</li>
