--- a/faq.html
+++ b/faq.html
@@ -52,7 +52,6 @@
     <div class="container">
       <div class="row text-center">
         <h2>Frequently Asked Questions</h2>
-        <br>
 		<a class="btn btn-primary" href="contact.html" role="button">Learn more</a>
       </div>
     </div>
@@ -71,13 +70,13 @@
     <h3>How Do I Know If I'm Ready For An Editor?</h3>
     <p>Contact an editor when your project is at least 95 percent complete. To get the most out of your editorial experience, you will need to address revisions within a few days of receiving them. At times this will require minor rewrites or expansions on an idea. Each project is completed within a set time frame.</p>
     <h3>What Should I Expect In The Editing Process?</h3>
-    <p>At Faith-Based Editorial Services the journey begins with a critique of your work as a whole. For a flat fee, the editor reads your manuscript in detail and prepares a 2–4 page evaluation that includes the following:
+    <p>At Faith-Based Editorial Services the journey begins with a critique of your work as a whole. For a flat fee, Bethany reads your manuscript in detail and prepares a 2–4 page evaluation that includes the following:
     <ul>
     <li>Book synopsis: Bethany will summarize your book in a paragraph or two, highlighting main ideas and themes. This step will help you determine whether your manuscript effectively conveys what you intend.</li>
-    <li>Strengths and concerns: While some publishing companies are quick to assure aspiring writers that their books need only a minor copyedit prior to release, Bethany strives to give each project the level of attention it truly needs—even if that means encouraging you to begin again with a fresh idea. She will highlight your strengths as a writer and will identify the best part(s) of your book while also pointing out major issues that might hinder its overall impact.</li>
+    <li>Strengths and concerns: Whereas some companies are quick to assure aspiring writers that their books need only a minor copyedit prior to release, Bethany strives to give each project the level of attention it truly needs—even if that means encouraging you to begin again with a fresh idea. She will highlight your strengths as a writer and will identify the best part(s) of your book while also pointing out major issues that might hinder its overall impact.</li>
     <li>Observations and revision guides: Bethany will address your book’s specific developmental needs, offering general insight into how to correct overall issues in flow, content completion, and character development. This is not an edit, but it will prepare you for the process. A critique is a guide to make sure you are headed in the right direction.</li>
-    <li>Simple changes: The editor will offer a list of easy adjustments you can make to prepare your manuscript for market.</li>
-    <li>Trade helps: The editor will provide software shortcuts to help build your confidence for the revision process and will identify which editing service(s) might best meet your project’s needs.</li>
+    <li>Simple changes: Bethany will offer a list of easy adjustments you can make to prepare your manuscript for market.</li>
+    <li>Trade helps: Bethany will provide software shortcuts to help build your confidence for the revision process and will identify which editing service(s) might best meet your project’s needs.</li>
     </ul></p>
     <h3>How Much Will A Critique Cost?</h3>
     <p>Fees are based on the word count of your manuscript.            
@@ -88,20 +87,20 @@
     <li>80,001–100,000 words: $500</li>
     </ul></p>
     <h3>How Long Will It Take?</h3>
-    <p>Times may vary depending on Bethany's workload. Usually you can plan on two weeks for up to 80,000 words and three weeks for longer manuscripts.</p>
-    <p>Critiques never obligate you to proceed with further editing; in fact, they are designed to limit your costs. After thoroughly reviewing your work, your editor will help you understand the time and financial investment your project needs prior to submission or publication. Should you and the editor choose to move forward with an edit, a sample edit and estimate will be provided prior to contract.</p>
-    <p>Typically, documents are edited in MS Word using the Track Changes feature. It allows you to easily follow the comments and suggested revisions. Bethany first performs a detailed content edit of your work, passes the revised piece to you, and allows you the option of returning it for a copy edit (fine tuning). Please note: Only manuscripts that have undergone a professional content edit are eligible for fine tuning.</p>
+    <p>Times may vary depending on Bethany's workload. But usually you can plan on two weeks for up to 80,000 words and three weeks for longer manuscripts.</p>
+    <p>Critiques never obligate you to proceed with further editing; in fact, they are designed to limit your costs. After thoroughly reviewing your work, Bethany will help you understand the time and financial investment your project needs prior to submission or publication. Should you and she choose to move forward with an edit, a sample edit and estimate will be provided prior to contract.</p>
+    <p>Typically, documents are edited in MS Word using the Track Changes feature. It allows you to easily follow the comments and suggested revisions. Bethany first performs a detailed content edit of your work, passes the revised piece to you, and then copy edits (fine tune) the final manuscript. Please note: Only manuscripts that have undergone a professional content edit are eligible for fine tuning.</p>
     <h3>What Separates Faith-Based From Similar Editing Services?</h3>
     <p>Colossians 3:23 teaches that we should perform our work wholeheartedly as to the Lord. Every published work should be as strong and polished as possible—especially when it pertains to the gospel message or to growth in Christ. Your maturity as a writer and the success of your work are important. Bethany will offer not just constructive criticism but sincere encouragement.</p>
     <h3>What If I Don't Like A Revision?</h3>
-    <p>Content editing is both science and art. Great editors do their best to bring out your best. In instances where opinions differ, Faith-Based Editorial Services will bow to you. If at any point you decide you don’t like your editor’s approach, you may resign from the contract and pay only for hours worked.</p>
+    <p>Content editing is both science and art. Great editors do their best to bring out your best. In instances where opinions differ, Faith-Based Editorial Services will bow to you. If at any point you decide you don’t like Bethany’s approach, you may resign from the contract and pay only for hours worked. She wants you to love the way your project takes shape.</p>
       </div>
     </div>
   </section>
   <footer class="container">
       <div class="row">
-        <p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
-        <ul class="col-sm-8">
+          <p class="col-sm-4"><a href="mailto:bethany@faithbasededitorial.com">bethany@faithbasededitorial.com</a><br>&copy; 2016 Faith-Based Editorial Services</p>
+          <ul class="col-sm-8">
           <li class="col-sm-2">
             <a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="images\FB-fLogo-Blue-broadcast-2.png"> </a>
           </li>
