more content changes

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-369763-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-369763-6');
+</script>
 </head>
 <body>
    <!--Begin Navigation-->
@@ -43,7 +51,7 @@
   <section class="jumbotron">
     <div class="container">
       <div class="row text-center">
-        <h2>Contact Us</h2>
+        <h2>Contact Bethany</h2>
         <h3>Thank you for your interest in Faith-Based Editorial Services. I would love to help you! <br>Please e-mail me and tell me about your project: <a href="mailto:bethany@faithbasededitorial.com">bethany@faithbasededitorial.com</a>. <br>I will reply as soon as possible.</h3>
 <!--<div class="contactForm">
         <form id="serverless-contact-form">
@@ -62,12 +70,12 @@
   <section class="container">
     <div class="row">
       <div class="col-sm-6">
-        <p>[Working with my editor was] a two-month tutoring session. ... Bethany takes spaghetti on paper and somehow creates a work of art.</p>
-        <p>Stephanie Huffman, <i>When You Grow Up and Get ... Single</i></p>
+        <p>"Bethany McShurley, you kept me moving. Without you, I would've focused on the mountain and not the Mountain Mover."</p>
+        <p>Tara McClary Reeves, <a href="http://www.amazon.com/Point-Me-Jesus-Devotions-Children/dp/1424550947?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1424550947" target="_blank"><i>Point Me to Jesus: 365 Devotions for Parents and Children</i></a></p>
       </div>
       <div class="col-sm-6">
-        <p>Faith-Based Editorial Services ... thanks for your love of Jesus, your servant's heart, and your valued partnership on my project.</p>
-        <p>Linden Wolfe, <i>Captivated by the King and His Kingdom</i>.</p>
+        <p>"I am indebted to ... Bethany for giving her whole heart to the manuscript and remaining sensitive to my feelings as she helped me express myself more clearly."</p>
+        <p>Martha Lawley, <a href="http://www.amazon.com/Attending-Bride-Christ-Preparing-Return/dp/1940243645?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1940243645" target="_blank"><i>Attending the Bride of Christ: Preparing for His Return</i></a></p>
       </div>
     </div>
   </section>
