--- a/index.html
+++ b/index.html
@@ -60,19 +60,17 @@
     </div>
   </section>
   <section class="container">
-    <div class="row">
-      <div id="testimonial">
-      <div class="col-sm-6">
-        <p>[Working with my editor was] a two-month tutoring session. ... Bethany takes spaghetti on paper and somehow creates a work of art.</p>
-        <p>Stephanie Huffman, <i>When You Grow Up and Get ... Single</i></p>
-      </div>
-      <div class="col-sm-6">
-        <p>Faith-Based Editorial Services ... thanks for your love of Jesus, your servant's heart, and your valued partnership on my project.</p>
-        <p>Linden Wolfe, <i>Captivated by the King and His Kingdom</i>.</p>
+      <div class="row">
+        <div class="col-sm-6">
+          <p>[Working with this editor was] a two-month tutoring session. ... Bethany takes spaghetti on paper and somehow creates a work of art.</p>
+          <p>Stephanie Huffman, <a href="http://www.amazon.com/When-You-Grow-Get-Single/dp/0615312462?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0615312462" target="_blank"><i>When You Grow Up and Get ... Single</i></a></p>
+        </div>
+        <div class="col-sm-6">
+          <p>Faith-Based Editorial Services ... thanks for your love of Jesus, your servant's heart, and your valued partnership on my project.</p>
+          <p>Linden Wolfe, <a href="http://www.amazon.com/Captivated-Christ-Focusing-Linden-Wolfe/dp/1606473697?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1606473697" target="_blank"><i>Captivated by the King and His Kingdom</i></a></p>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
   <footer class="container">
     <div class="row">
         <p class="col-sm-4"><a href="mailto:bethany@faithbasededitorial.com">bethany@faithbasededitorial.com</a><br>&copy; 2016 Faith-Based Editorial Services</p>
