editor image changes

--- a/faq.html
+++ b/faq.html
@@ -60,11 +60,12 @@
       <div class="row">
           <div class="col-sm-8">
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-8">
         <h3>Do I Really Need An Editor?</h3>
       <p>Rabbit trails, awkward sentence construction, grammatical errors, and breaks in thought flow reduce a writer’s effectiveness. That’s why even seasoned authors benefit from an editor’s fresh perspective and critical eye. Please do not publish your book without first seeking an editor’s guidance. You will sell yourself—and your readers—short.</p>
 </div> 
-<div class="col-sm-3"><img src="images\everyone-needs-a-good-editor2.jpg">
+
+<div class="col-sm-4"><div id="Editor"><img src="images\everyone-needs-a-good-editor2.jpg"></div>
 </div> 
   </div>
     <h3>How Do I Know If I'm Ready For An Editor?</h3>
