--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>Faith-Based Editorial Services</title>
+  <meta property="og:image" content="images/siteImage.jpg">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
