--- a/faq.html
+++ b/faq.html
@@ -6,9 +6,8 @@
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1024">
 	<meta property="og:image:height" content="1024">
-	<meta property="og:title" conent="Faith-Based Editorial Services">
-	<meta property="og:description" conent="Whether you’ve written a devotional book, autobiography, Bible study, or novel, a thorough edit can make your manuscript—and your message—shine. Before shopping for an agent or releasing your book on your own, allow a seasoned editor to strengthen your project.
-	Bethany McShurley specializes in preparing and developing writers for the Christian market.">
+	<meta property="og:title" content="Faith-Based Editorial Services">
+	<meta property="og:description" content="Bethany McShurley specializes in preparing and developing writers for the Christian market.">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
