--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Faith-Based Editorial Services</title>
+  <title>Faith-Based Editorial Services</title>
+	<link rel="icon" href="http://www.faithbasededitorial.com/images/icon-books.gif">
   <meta property="og:image" content="http://www.faithbasededitorial.com/images/siteImage.jpg">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1024">
